spacing issues

--- a/About Page/about.css
+++ b/About Page/about.css
@@ -74,12 +74,10 @@ p {
     }
 
     main {
-        justify-content: center;
-        align-items: center;
+        /* justify-content: center;
+        align-items: center; */
         text-align: center;
         margin-right: 10%;
-        margin-left: 10%;
-        border: 5px solid red;
-        width: 80%
+        margin-left: 20%;
     }
 }
